# algoshs

./: .gitignore  README.md  algoshs.cabal
src/: A_BASE.hs  A_MT.hs  A_REP.hs  A_RL.hs  A_XR.hs  Algo.hs  AlgoRegistry.hs  AlgoUtils.hs  Algos.hs  Algos2.hs  Algos3.hs  Algos4.hs  Constants.hs  PortCapParser.hs  PortCapParser.y  PortCapability.hs  PortCapability2.hs  PortCapability3.hs  PortCapability4.hs  build  ghc_cmds  out_1  out_2  out_3  out_4  out_5  out_6  out_8
src/templates/: BASE.st  MT.st  REP.st  RL.st  XR.st
