name:           algoshs
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         sanchay

executable algoshs
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   unordered-containers,
                   hashable,
                   random,
                   array
  ghc-options:     -Wall

